<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_products"
        android:icon="@mipmap/ic_shopping_basket_white_24dp"
        android:title="@string/navProducts" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@mipmap/ic_shopping_cart_white_24dp"
        android:title="@string/navCart" />
    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/ic_person_white_24dp"
        android:title="@string/navAccount" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@mipmap/ic_exit_to_app_white_24dp"
        android:title="@string/navLogout" />
    <item
        android:id="@+id/nav_exit"
        android:icon="@mipmap/ic_power_settings_new_white_24dp"
        android:title="@string/navExit" />
</menu>