<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yarin.project.Account"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/changePassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/currentPassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/currentPasswordFieldAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/newPassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newPasswordFieldAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/confirmNewPassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirmNewPasswordFieldAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeProfilePicture"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/profilePictureMyAccount"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/profilepic" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gallaryButtonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/cameraButtonAccount"
                android:layout_toRightOf="@+id/cameraButtonAccount"
                android:background="@drawable/circlebutton"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:fontFamily="serif"
                android:text="@string/fromGallery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cameraButtonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                android:layout_weight="1"
                android:background="@drawable/circlebutton"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:fontFamily="serif"
                android:text="@string/fromCamera"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saveButtonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/circlebutton"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:fontFamily="serif"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
