<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context="com.example.yarin.project.Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/registeration"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:text="@string/user_name" />

                <EditText
                    android:id="@+id/userNameField"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:backgroundTint="@color/dark"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/passwordTextField"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:backgroundTint="@color/dark"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/ConfirmPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/confirmPasswordTextField"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:backgroundTint="@color/dark"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="142.69"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/birthday"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/showDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="88.29"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/picDate"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="47.01"
                    android:background="@drawable/roundcorner"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:onClick="datePicker"
                    android:radius="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/emailTextField"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:backgroundTint="@color/dark"
                    android:ems="10"
                    android:fontFamily="serif"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="17sp" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/male"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/female"
                        android:textColor="@android:color/black" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/citySpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:background="@android:color/holo_orange_dark"
                    android:entries="@array/cities"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/addressTextField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:ems="10"
                    android:fontFamily="serif"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@color/dark"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/profilePicture"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/cameraButton"
                        android:layout_width="112dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@drawable/roundcorner"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:elevation="0dp"
                        android:fontFamily="serif"
                        android:text="@string/fromCamera"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="13dp" />

                    <Button
                        android:id="@+id/galleryButton"
                        android:layout_width="112dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@drawable/roundcorner"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:fontFamily="serif"
                        android:text="@string/fromGallery"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/profilepic" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/termsAndConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="serif"
                    android:text="@string/read"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/termsLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:fontFamily="serif"
                    android:text="@string/terms"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="10sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/registerCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundcorner"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:fontFamily="serif"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundcorner"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:fontFamily="serif"
                    android:onClick="goToHome"
                    android:text="@string/register"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
